# vector-db-demo

./: Cargo.toml  embeddings.py
src/: main.rs
